--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = eMeat
-version = 0.0.1
 summary = Simple replacement for AnyVite supporting one invite
 description-file =
     README.rst
@@ -16,6 +15,10 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
+
+[entry_points]
+wsgi_scripts =
+    emeat-server = emeat.main:main
 
 [pbr]
 warnerrors = True
