--- a/tox.ini
+++ b/tox.ini
@@ -16,5 +16,5 @@ commands = flake8 {posargs}
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
 show-source = True
-ignore = E123,E125
-exclude=.venv,.git,.tox,dist,doc,*egg,build
+ignore = E123,E125,H102
+exclude=.venv,.git,.tox,dist,doc,*egg,build,ve
