A horrible hack to bring alembic in-app
This removes the requirement of having the source repo locally, as
everything that is needed is in the module.  emeat-db-manage takes care
of it.

It will be a bit buggy.

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,8 @@ classifier =
 [entry_points]
 wsgi_scripts =
     emeat-server = emeat.main:main
+console_scripts =
+    emeat-db-manage = emeat.db.migration.cli:main
 
 [pbr]
 warnerrors = True
