--- a/emeat/db/migration/alembic.ini
+++ b/emeat/db/migration/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
-script_location = alembic_migrations
-sqlalchemy.url = sqlite:///AusDayMeat.db
+script_location = %(here)s/alembic_migrations
+sqlalchemy.url =
 
 
 [loggers]
