--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = pep8
+envlist = py35,pep8
 skipsdist = True
 
 [testenv]
 usedevelop = True
 install_command = pip install -U {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
+commands = python setup.py testr --testr-args='{posargs}'
 
 [testenv:venv]
 commands = {posargs}
